small changes after the code review